Student, Staff and CareGiver integrated into Person Form
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
@@ -28,6 +28,8 @@
 			{% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
             {% set disabled = '' %}
             {% if name == 'staff' and form.staff.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
+            {% if name == 'careGiver' and form.careGiver.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
+            {% if name == 'student' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
 			<li{{ disabled }}><a href="#{{ name }}" role="tab" data-toggle="tab">{{ tab.label|trans({}, translation) }}</a></li>
 		{% endfor %}
 	</ul>
@@ -39,6 +41,14 @@
             {% if name == 'staff' and form.staff.person is not defined %}
                 <div class="tab-pane" id="{{ name }}" >
                     {%  include 'BusybeeFormBundle:Forms:emptyTab.html.twig' with {'name': 'person.staff.title'|trans({'%name%': form.vars.value.formatName}) }  %}
+                </div>
+            {% elseif name == 'careGiver' and form.careGiver.person is not defined %}
+                <div class="tab-pane" id="{{ name }}" >
+                    {%  include 'BusybeeFormBundle:Forms:emptyTab.html.twig' with {'name': 'person.careGiver.title'|trans({'%name%': form.vars.value.formatName}) }  %}
+                </div>
+            {% elseif name == 'student' and form.student.person is not defined %}
+                <div class="tab-pane" id="{{ name }}" >
+                    {%  include 'BusybeeFormBundle:Forms:emptyTab.html.twig' with {'name': 'person.student.title'|trans({'%name%': form.vars.value.formatName}) }  %}
                 </div>
             {% else %}
 			<div class="tab-pane{{ active }}" id="{{ name }}" >
@@ -62,9 +72,9 @@
 	{{ parent() }}
     {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
     {% include "BusybeeFormBundle:Scripts:jquery.collection.js.html.twig" %}
+    <script type="text/javascript" src="{{ asset('js/bootstrap-checkbox.min.js') }}"></script>
     {% include 'BusybeePersonBundle:Person:script.html.twig' %}
     {% include 'BusybeeHomeBundle:Scripts:monitorForm.js.twig' with {'route': 'person_manage'} %}
-	<script type="text/javascript" src="{{ asset('js/bootstrap-checkbox.min.js') }}"></script>
 	<script>
         $(".yes-no").checkboxpicker({
             iconCls: "halflings"
@@ -73,16 +83,52 @@
             var checked = $('#person_staffQuestion').prop('checked');
             if (checked) {
                 $('.staffMember').prop('disabled', false);
-			} else {
+                $('#person_studentQuestion').prop('disabled', true);
+            } else {
                 $('.staffMember').prop('disabled', true);
-			}
+                $('#person_studentQuestion').prop('disabled', false);
+            }
+        });
+        $('#person_careGiverQuestion').checkboxpicker().on('change', function() {
+            var checked = $('#person_careGiverQuestion').prop('checked');
+            if (checked) {
+                $('.careGiver').prop('disabled', false);
+                $('#person_studentQuestion').prop('disabled', true);
+            } else {
+                $('.careGiver').prop('disabled', true);
+                $('#person_studentQuestion').prop('disabled', false);
+            }
+        });
+        $('#person_studentQuestion').checkboxpicker().on('change', function() {
+            var checked = $('#person_studentQuestion').prop('checked');
+            if (checked) {
+                $('.student').prop('disabled', false);
+                $('#person_staffQuestion').prop('disabled', true);
+                $('#person_careGiverQuestion').prop('disabled', true);
+            } else {
+                $('.student').prop('disabled', true);
+                $('#person_staffQuestion').prop('disabled', false);
+                $('#person_careGiverQuestion').prop('disabled', false);
+            }
         });
         $(document).ready(function(){
-            var checked = $('#person_staffQuestion').prop('checked');
-            if (checked) {
+            var staff_checked = $('#person_staffQuestion').prop('checked');
+            if (staff_checked) {
                 $('.staffMember').prop('disabled', false);
             } else {
                 $('.staffMember').prop('disabled', true);
+            }
+            var careGiver_checked = $('#person_careGiverQuestion').prop('checked');
+            if (careGiver_checked) {
+                $('.careGiver').prop('disabled', false);
+            } else {
+                $('.careGiver').prop('disabled', true);
+            }
+            var student_checked = $('#person_studentQuestion').prop('checked');
+            if (student_checked) {
+                $('.student').prop('disabled', false);
+            } else {
+                $('.student').prop('disabled', true);
             }
 
 		});
