--- a/src/Busybee/PersonBundle/Resources/views/Person/person.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/person.html.twig
@@ -89,6 +89,22 @@
                 {% else %}
                     {% do form.studentQuestion.setRendered() %}
                 {% endif %}
+                {% if form.vars.value.id is not null and canBeUser(form.vars.value) %}
+					<div class="col-sm-2 well">
+                        {% if form.user.vars.value is empty or form.user.vars.value.getId() is empty %}
+                            {{ form_row(form.userQuestion) }}
+                        {% else %}
+                            {% set attributes = {'checked': 'checked'} %}
+                            {% if not canDeleteUser(form.vars.value, get_parameter('person')) %}
+                                {% set attributes = attributes|merge({'disabled': 'disabled'}) %}
+                            {% endif %}
+                            {{ form_row(form.userQuestion, attributes) }}
+                        {% endif %}
+                        {% set offset = offset - 2 %}
+					</div>
+                {% else %}
+                    {% do form.userQuestion.setRendered() %}
+                {% endif %}
 				<div class="col-sm-offset-{{ offset }} col-sm-2 well">
 					{{ form_row(form.title) }}
 				</div>
