--- a/src/Busybee/PersonBundle/Resources/views/Person/user.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/user.html.twig
@@ -1,4 +1,4 @@
-{# src/Busybee/PersonBundle/Resources/views/Person/staff.html.twig #}
+{# src/Busybee/PersonBundle/Resources/views/Person/user.html.twig #}
 
 {% trans_default_domain "BusybeePersonBundle" %}
 
@@ -8,7 +8,7 @@
 
 <div class="panel panel-primary busybee-panel">
 	<div class="panel-heading">
-		<h3 class="panel-title">{{ 'person.staff.title'|trans({'%name%': form.vars.value.formatName})}}
+		<h3 class="panel-title">{{ 'person.user.title'|trans({'%name%': form.vars.value.formatName})}}
 		<button title='{{ 'person.return'|trans}}' type="button" class="halflings halflings-hand-left btn btn-primary" onClick="window.open('{{ path('person_manage') }}','_self')" style="float: right"></button>
 		{% if id != 'Add' %}
 			<button title='{{ 'person.add.title'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('person_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
@@ -21,11 +21,37 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-6 well">
-                    {{ form_widget(form.staff.person) }}
-                    {{ form_row(form.staff.type) }}
+                    {{ form_row(form.user.username) }}
+                    {{ form_row(form.user.usernameCanonical) }}
+                    {{ form_widget(form.user.person) }}
+                    {{ form_widget(form.user.email) }}
+                    {{ form_row(form.user.emailCanonical) }}
+                    {{ form_widget(form.user.password) }}
 				</div>
 				<div class="col-sm-6 well">
-                    {{ form_row(form.staff.jobTitle) }}
+                    {{ form_row(form.user.locale) }}
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6 well">
+                    {{ form_widget(form.user.directroles) }}
+				</div>
+				<div class="col-sm-6 well">
+                    {{ form_row(form.user.groups) }}
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-3 well">
+                    {{ form_row(form.user.enabled) }}
+				</div>
+				<div class="col-sm-3 well">
+                    {{ form_row(form.user.locked) }}
+				</div>
+				<div class="col-sm-3 well">
+                    {{ form_row(form.user.expired) }}
+				</div>
+				<div class="col-sm-3 well">
+                    {{ form_row(form.user.credentials_expired) }}
 				</div>
 			</div>
 		</div>
