--- a/src/Busybee/FamilyBundle/Resources/views/Family/people.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/people.html.twig
@@ -27,14 +27,14 @@
 				<div class="col-sm-6">
 					<div class="panel panel-info busybee-panel">
 						<div class="panel-heading">
-							<h3 class="panel-title">{{ form_label(form.student) }}</h3>
+							<h3 class="panel-title">{{ form_label(form.students) }}</h3>
 						</div>
 						<div class="panel-body">
-                            {% if form.student.vars.attr.help is not empty %}
-								<p class="alert alert-warning">{{ form.student.vars.attr.help|trans }}</p>
+                            {% if form.students.vars.attr.help is not empty %}
+								<p class="alert alert-warning">{{ form.students.vars.attr.help|trans }}</p>
                             {% endif %}
-                            {{ form_widget(form.student) }}
-                            {% do form.student.setRendered() %}
+                            {{ form_widget(form.students) }}
+                            {% do form.students.setRendered() %}
 						</div>
 					</div>
 				</div>
