--- a/src/Busybee/FamilyBundle/Resources/views/Family/script.html.twig
+++ b/src/Busybee/FamilyBundle/Resources/views/Family/script.html.twig
@@ -132,7 +132,7 @@
         });
 
         $(".studentList").collection({
-            name_prefix: '{{ form.student.vars.full_name }}',
+            name_prefix: '{{ form.students.vars.full_name }}',
             allow_up: false,
             allow_down: false,
             add: '<button title="{{ 'family.student.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
