--- a/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/layout.html.twig
@@ -20,14 +20,14 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-			{% if is_granted('ROLE_USER') %}<li><a href="{{ path("busybee_security_user_edit") }}">Update User: {{ app.user.username }}</a></li> {% endif %}
-			{% if is_granted('ROLE_ADMIN') %}<li><a href="{{ path("busybee_security_user_register") }}">Register</a></li>{% endif %}
+			{% if is_granted('ROLE_USER') %}<li><a href="{{ path("security_user_edit") }}">Update User: {{ app.user.username }}</a></li> {% endif %}
+			{% if is_granted('ROLE_ADMIN') %}<li><a href="{{ path("security_user_register") }}">Register</a></li>{% endif %}
 			{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
 				<li><a href="{{ path('home_page', {'_switch_user': '_exit'}) }}">Exit impersonation</a></li>
-				<li><a href="{{ path("busybee_security_user_reset_request") }}">Reset Password</a></li>
+				<li><a href="{{ path("security_user_reset_request") }}">Reset Password</a></li>
 			{% else %}
 				{% if is_granted('ROLE_ALLOWED_TO_SWITCH') %}
-					<li><a href="{{ path("busybee_switch_user_impersonate") }}">Impersonate</a></li>
+					<li><a href="{{ path("switch_user_impersonate") }}">Impersonate</a></li>
 				{% endif %}
 			{% endif %} 
 		</ul>
