--- a/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
@@ -3,6 +3,7 @@
 {% trans_default_domain "BusybeePersonBundle" %}
 
 {% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
+
 	<div class="panel panel-info busybee-panel">
 		<div class="panel-heading">
 			<h3 class="panel-title">{{ 'locality.title'|trans}}
@@ -35,7 +36,7 @@
 			</div>
 			<div class='row'>
 				<div class='col-sm-6 well'>
-					{{ form_row(form.locality) }}
+					{{ form_row(form.name) }}
 				</div>
 				<div class='col-sm-6 well'>
                     {{ form_row(form.territory) }}
