--- a/src/Busybee/PersonBundle/Resources/views/Locality/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Locality/index.html.twig
@@ -15,6 +15,9 @@
 {%  block titleContainer %}{% endblock titleContainer %}
 
 {% block contentContainer %}
+    {% block flashMessages %}
+        {% include 'BusybeeHomeBundle:Default:flash.html.twig' with {'flashClass': 'fadeAlert', 'transDomain': 'BusybeePersonBundle'} %}
+    {% endblock flashMessages %}
 	{{ form_start(form, {'action': path('locality_manage', {'id': id}), 'method': 'POST'}) }}
 		<div class="container-fluid">
 			<div class='row' id="localityMessage" style="display: none;">
